noinst_LIBRARIES = libguiclient.a
libguiclient_a_SOURCES = gtk_client.c gtk_client.h \
                         optdialog.c optdialog.h \
                         newgamedia.c newgamedia.h dopewars-pill.xpm
INCLUDES   = -I../../intl -I${srcdir} -I${srcdir}/.. -I../.. @GTK_CFLAGS@
DEFS       = @DEFS@ -DLOCALEDIR=\"${localedir}\"
